dev/mongo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo
  namespace: dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo
        name: mongo
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: mongo-data
      restartPolicy: Always
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-data
status: {}
