dev/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: dev
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    app: mongo
status:
  loadBalancer: {}
