dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress-dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "app"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - dev.app.com
      secretName: tls-certificate
  rules:
  - host: dev.app.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 3000
